--- a/09 Queue_Deque_Stack.ipynb
+++ b/09 Queue_Deque_Stack.ipynb
@@ -81,7 +81,7 @@
     "pq.put((1, \"First Element\"))\n",
     "pq.put((43, 4.3))\n",
     "while not pq.empty():\n",
-    "    print(pq.get())\n"
+    "    print(pq.get())"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "print(dq)\n",
     "\n",
     "dq.reverse()\n",
-    "print(dq)\n"
+    "print(dq)"
    ]
   },
   {
